--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^1.4.0",
     "circular-json": "^0.5.9",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.1",
     "express-session": "^1.17.3",
