--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "md5": "^2.3.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "@types/circular-json": "^0.4.0",
