--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "md5": "^2.3.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "mysql2": "^3.6.1",
     "readline": "^1.3.0",
     "winston": "^3.10.0"
   },
